--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
+.container {
+  width: 500px; height: 600px;
+  margin: 80px auto;
+  border-radius: 10px;
+  background-color: #f2f2f2;
   text-align: center;
+  padding: 50px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+label, p {
+  font-size: 14px;
+  font-weight: bolder;
+  color: #333;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  width: 300px; height: 30px;
+  margin: 10px 0;
+  font-size: 12px;
+  text-align: center;
+  border: 1px solid #999;
+  border-radius: 4px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.css-b62m3t-container{
+  width: 300px;
+  margin: 10px auto;
+}
+.result {
+  background-color: #333;
   color: white;
+  border: none;
+  margin: 50px 0;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dot {
+  width: 15px;
 }
