--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 .container {
   width: 500px; height: 600px;
-  margin: 80px auto;
+  margin: 60px auto;
   border-radius: 10px;
   background-color: #f2f2f2;
   text-align: center;
-  padding: 50px;
+  padding: 20px;
+}
+.mui-datepicker {
+  width: 300px; height: 400px;
+  margin: 60px auto;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+  text-align: center;
+  padding: 20px;
 }
 label, p {
   font-size: 14px;
